fixing align of input in login form joomla 3

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -604,10 +604,6 @@ dl.nav-tabs{
 #sidebar1,
 #sidebar2{
 	overflow: visible;
-	#modlgn-username,
-	#modlgn-passwd{
-		display: block;
-	}
 	#form-login-username,
 	#form-login-password{
 		label{
